# Xiaotian_arm

./: .gitignore  CMakeLists.txt  README.md
Robot_model/ARM_URDF/: CMakeLists.txt  package.xml
Robot_model/ARM_URDF/meshes/: Link2.STL
Robot_model/ARM_URDF/urdf/: ARM.urdf
Robot_model/ARM_XML/: ARM.xml  Link3.STL
Utilities/include/: EstimatedState.h  MotorTypes.h  SharedMemory.h  SharedMemoryInterface.h  XiaotianArmCommData.h  cppTypes.h  saveMatlabMat.h  savemat.h
Utilities/include/SimUtilities/: IMUTypes.h  MotorTypes.h  RobotInfo.h
Utilities/src/: PeriodicTask.cpp  SegfaultHandler.cpp  filters.cpp
config/: parameters.yaml
controller/: CMakeLists.txt  main.cpp
controller/include/: ArmController.h  ArmModel.h  ControlData.h  CtrlData.h  RobotArmModel.h  Trajectory.h
controller/src/: ArmController.cpp  ControlData.cpp  RobotArmModel.cpp  Trajectory.cpp
data/: Plot_ani.m  door_state.txt  motion1_state.txt  motion2_state.txt  motion3_state.txt  motion4_state.txt  plotData.asv  plotData.m
gripper_test/: CMakeLists.txt
gripper_test/include/: arm_controller.h
gripper_test/src/: arm_controller.cpp  robot_arm.cpp
robot_model/ARM_URDF/launch/: display.launch  gazebo.launch
robot_model/ARM_URDF/meshes/: Link4.STL  Link5.STL  base_link.STL
robot_model/ARM_URDF/urdf/: ARM.csv
robot_model/ARM_XML/: ARM.urdf  ARM.xml  Xiaotian_Arm_v1.urdf  Xiaotian_Arm_v1.xml  Xiaotian_Arm_v3.urdf  Xiaotian_Arm_v3.xml
robot_model/ARM_XML/arm_meshes/: Link1.STL  actuator6.STL
robot_model/ARM_XML/arm_meshes_v3/: actuator1.STL  actuator6.STL
robot_model/Xiaotian_Arm_v1/: CMakeLists.txt  package.xml
robot_model/Xiaotian_Arm_v1/launch/: display.launch  gazebo.launch
robot_model/Xiaotian_Arm_v1/meshes/: actuator1.STL
robot_model/Xiaotian_Arm_v1/urdf/: Xiaotian_Arm_v1.csv  Xiaotian_Arm_v1.urdf
robot_model/Xiaotian_Arm_v3/: CMakeLists.txt  package.xml
robot_model/Xiaotian_Arm_v3/config/: joint_names_Xiaotian_Arm_v3.yaml
robot_model/Xiaotian_Arm_v3/launch/: display.launch  gazebo.launch
robot_model/Xiaotian_Arm_v3/meshes/: gripper.STL
robot_model/Xiaotian_Arm_v3/urdf/: Xiaotian_Arm_v3.csv  Xiaotian_Arm_v3.urdf
sim/: CMakeLists.txt  simulate.cpp
src/: simulate.cpp
user/: GamepadCommand.h  UserInterface.cpp  UserInterface.h  joystick.cpp
